# agenticAI

./: pyproject.toml
1_foundations/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  app.py  faq.db  greet.py  greeting.ipynb  rag_setup.py  requirements.txt
1_foundations/community_contributions/1_foundations_using_gemini/: 1_lab1.ipynb  3_lab3.ipynb  4_lab4.ipynb
1_foundations/community_contributions/1_medtech_opportunity_finder/: 01_medtech.ipynb
1_foundations/community_contributions/2_medguard_debate/: 02_medguard.ipynb
1_foundations/me/: leadership.txt  other.txt  projects.txt  summary.txt
2_openai/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  mailing_list.txt
2_openai/community_contributions/: meetings_reminder.ipynb
3_crew/auto_coder/: README.md  pyproject.toml
3_crew/auto_coder/output/: code_and_output.txt
3_crew/auto_coder/src/auto_coder/: crew.py  main.py
3_crew/auto_coder/src/auto_coder/config/: agents.yaml  tasks.yaml
3_crew/community_contributions/1_swap_trading_prism/: README.md  pyproject.toml
3_crew/community_contributions/1_swap_trading_prism/src/prism/: crew.py  database.py  tools.py
4_langgraph/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  memory.db-shm  memory.db-wal  sidekick.py
5_autogen/: 1_lab1_autogen_agentchat.ipynb  2_lab2_autogen_agentchat.ipynb  3_lab3_autogen_core.ipynb  4_lab4_autogen_distributed.ipynb  agent1.py  agent2.py  agent3.py  creator.py  idea3.md  world.py
6_mcp/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  5_lab5.ipynb  traders.py
6_mcp/sandbox/: banoffee.md
(+38 files in other folders)
