[project]
name = "auto_coder"
version = "0.1.0"
description = "auto_coder using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.175.0,<1.0.0"
]

[project.scripts]
auto_coder = "auto_coder.main:run"
run_crew = "auto_coder.main:run"
train = "auto_coder.main:train"
replay = "auto_coder.main:replay"
test = "auto_coder.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
